# BridgeSandbox

./: .gitignore  Directory.Build.props  README.md  build.proj
.github/workflows/: master.yml
Bridge/: CMakeLists.txt  bridge.cpp
DnLib/: DnLib.csproj  Init.cs
JavaApp/: JavaApp.java
